@@ -10,6 +10,7 @@ November 18, 2012
 ** labels in lexer rules
 ** tokens {A;B;} syntax
 ** tokens {A='C';} syntax
+** {...}?=> gate semantic predicates
 
 November 17, 2012
 
